--- a/PageAccueilSiteDon/CSS/style.css
+++ b/PageAccueilSiteDon/CSS/style.css
@@ -10,6 +10,7 @@
     background-size: cover; 
 } 
 
+/*
 .text-infos{ float: right;}
 .container-fluid header  {
 
@@ -19,4 +20,4 @@
 .container-fluid  section {
 
     color: aliceblue;
-}
+}*/
